# app-cicd-toolkit

./: .gitignore  Contributing.md  README.md  azure-pipelines.yml  local-github-actions-workflow.yml  pyproject.toml  remote-github-actions-workflow.yml  requirements-dev.txt  tox.ini
.github/: CODEOWNERS
.github/workflows/: build-package.yaml  linter.yaml  run-tests.yaml
cicd/: ib_helpers.py  migration_helpers.py  promote_solution.py  solution_migration_udf.py  test_ib_helpers.py
ib_cicd/: ib_helpers.py  migration_helpers.py  promote_sb_solution.py  promote_solution.py  solution_migration_udf.py
template_workflows/: azure-pipelines.yml  local-github-actions-workflow.yml  remote-github-actions-solution-builder-workflow.yml  remote-github-actions-workflow.yml
tests/: fixtures.py  test_ib_helpers.py  test_migration_helpers.py  test_promote_sb_solution.py
