[project]
name = "instabase-app-cicd-toolkit"
version = "0.0.1"
requires-python = ">=3.10"
authors = [
    { name = "Hannah Roiter", email = "hannah.roiter@instabase.com" },
    { name = "Ganan Prabaharan", email = "ganan.prabaharan@instabase.com" },
    { name = "Ben Hope", email = "ben.hope@instabase.com" },
]
description = "Tools for building CI/CD workflows Instabase Solutions and Apps."
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

# Pick up dependencies from requirements.txt
# and requirements-test.txt
dynamic = ["dependencies", "optional-dependencies"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = [
  "cicd/",
]

[tool.hatch.build.targets.wheel.sources]
"cicd/" = "ib_cicd"
